Fixed object specifications vertical alignment to top.
This renders labels for elements with multiple values at the top of the row instead of the middle.

--- a/Templates/html/css/styles.css
+++ b/Templates/html/css/styles.css
@@ -141,8 +141,9 @@ a:hover {
 }
 
 .section-specification td {
+	vertical-align: top;
 	border-bottom: 1px solid #d6e0e5;
-	padding: .6em;
+	padding: .6em;	
 }
 
 .section-specification .specification-title {
